Add graceful exit, batching support serverside, improve settings
