# server/docs/swagger.json
@@ -554,6 +554,13 @@
                         "required": true
                     },
                     {
+                        "type": "integer",
+                        "description": "Batch Size",
+                        "name": "batch_size",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
                         "type": "string",
                         "description": "Bearer {token}",
                         "name": "Authorization",
